# serializer version: 1
# name: test_number_entities[number.mock_title_device_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.mock_title_device_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Device volume',
    'platform': 'foscam',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'device_volume',
    'unique_id': '123ABC_device_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[number.mock_title_device_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Device volume',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_device_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_number_entities[number.mock_title_speak_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.mock_title_speak_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Speak volume',
    'platform': 'foscam',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'speak_volume',
    'unique_id': '123ABC_speak_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[number.mock_title_speak_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Mock Title Speak volume',
      'max': 100,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.mock_title_speak_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
